<resources>
    <string name="app_name" translatable="false">Meowney</string>
    <string name="title_entries">Entries</string>
    <string name="title_stats">Stats</string>
    <string name="title_more">More</string>
    <string name="more_language">Language</string>
    <string name="title_about">About</string>
    <string name="title_app_colors">App colors</string>
    <string name="more_color_mode">Color mode</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_confirm">Confirm</string>
    <string-array name="color_mode_options">
        <item>Light</item>
        <item>Dark</item>
        <item>System Default</item>
    </string-array>
    <string name="app_version" translatable="false">v1.0.0</string>
    <string name="dialog_color_mode">Select color mode</string>
    <string name="dialog_select_language">Select language</string>
    <string name="fab_content_description">add button</string>
    <string name="title_add_entry">Add an entry</string>
    <string name="entries_income">Income</string>
    <string name="entries_expense">Expense</string>
    <string name="entries_transfer">Transfer</string>
    <string name="title_privacy">Privacy</string>
    <string name="privacy_hide_recents">Hide app content in recents?</string>
    <string name="navigation">Navigation</string>
    <string name="entries_description">Description</string>
    <string name="about_meowney_title">About Meowney</string>
    <string name="about_meowney_text">This application was designed and developed by theRacterr.</string>
    <string name="about_credits_title">Credits</string>
    <string name="about_credits_text">Some icons have been provided by www.freepik.com</string>
    <string name="all_accounts">All Accounts</string>
    <string name="select_account">Select an account</string>
    <string name="confirm">Confirm</string>
    <string name="input_a_number">Please input a number</string>
    <string name="entry_name">Transaction title</string>
    <string name="entry_deleted">Entry deleted</string>
    <string name="undo">UNDO</string>
    <string name="input_a_title">Please enter a title</string>
    <string name="license_button">Click to show licenses</string>
</resources>