<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_entries">

    <fragment
        android:id="@+id/navigation_entries"
        android:name="com.meowney.ui.entries.EntriesFragment"
        android:label="@string/title_entries"
        tools:layout="@layout/fragment_entries" />

    <fragment
        android:id="@+id/navigation_stats"
        android:name="com.meowney.ui.stats.StatsFragment"
        android:label="@string/title_stats"
        tools:layout="@layout/fragment_stats" />

    <fragment
        android:id="@+id/navigation_more"
        android:name="com.meowney.ui.more.MoreFragment"
        android:label="@string/title_more"
        tools:layout="@layout/fragment_more" />
</navigation>