<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.entries.AddEntryFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/addEntryToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/toolbarColor"
        app:navigationIcon="@drawable/ic_arrow_left_black_24dp"
        app:navigationIconTint="?attr/toolbarElementColor"
        app:title="@string/title_add_entry"
        app:titleTextColor="?attr/toolbarElementColor"
        app:titleCentered="true" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:background="?android:attr/listDivider"
        android:backgroundTint="?attr/toolbarElementColor" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RadioGroup
                android:id="@+id/radioGroupType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:colorBackground"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioIncome"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingVertical="16dp"
                    android:text="@string/entries_income"
                    android:textAllCaps="true"
                    android:autoSizeTextType="uniform"
                    android:textColor="?attr/colorOnPrimary"
                    android:background="@color/radio_button_color"
                    android:button="@null"
                    android:checked="true" />

                <RadioButton
                    android:id="@+id/radioExpense"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingVertical="16dp"
                    android:layout_marginHorizontal="1dp"
                    android:text="@string/entries_expense"
                    android:textColor="?attr/colorOnPrimary"
                    android:background="@color/radio_button_color"
                    android:textAllCaps="true"
                    android:autoSizeTextType="uniform"
                    android:button="@null" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imagePosNeg"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:padding="12dp"
                    android:src="@drawable/ic_plus_black_24dp"
                    app:tint="?attr/profitColor" />

                <EditText
                    android:id="@+id/editAmount"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginEnd="8dp"
                    android:inputType="numberDecimal"
                    android:textSize="64sp"
                    android:textAlignment="textEnd"
                    android:textColor="?attr/colorOnPrimary"
                    android:maxLength="7"
                    android:hint="100.0" />
            </LinearLayout>

            <EditText
                android:id="@+id/editTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:padding="8dp"
                android:inputType="text"
                android:text="@string/entry_name"/>

            <EditText
                android:id="@+id/editDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:padding="8dp"
                android:inputType="textMultiLine"
                android:hint="@string/entries_description" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/accountSelector"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="16dp"
                    android:textColor="?attr/toolbarElementColor"
                    android:textAppearance="?attr/textAppearanceTitleLarge"
                    android:textAlignment="center"
                    android:background="?attr/selectableItemBackground"/>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="?android:attr/listDivider"
                    android:backgroundTint="?attr/toolbarElementColor"/>

                <TextView
                    android:id="@+id/categorySelector"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginHorizontal="16dp"
                    android:layout_weight="1"
                    android:textColor="?attr/toolbarElementColor"
                    android:textAppearance="?attr/textAppearanceTitleLarge"
                    android:textAlignment="center"
                    android:background="?attr/selectableItemBackground"/>

            </LinearLayout>

            <Button
                android:id="@+id/confirmButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:backgroundTint="?attr/colorPrimary"
                android:text="@string/confirm" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>